FIXED responsive cards on small and xs screens
- also updated some colour text in objects

--- a/Website/Styles/style.css
+++ b/Website/Styles/style.css
@@ -339,6 +339,12 @@ position: inherit;
   font-size: larger;
 }
 
+@media (max-width: 576px){
+  #card-image img {
+    display: none;
+  }
+}
+
 /* jesse css for page Rentals */
 
 #rentals-container{
